--- a/templates/mysite/content_list.html
+++ b/templates/mysite/content_list.html
@@ -9,7 +9,16 @@
 </head>
 <body>
 
-
+    <h1>mysite</h1>
+    {% if content_list %}
+     {% for content in content_list %}
+     <hr/>
+     <h3><a href="/mysite/{{ content.id }}/">{{ content.title }}</a></h3>
+     <h5>{{ content.content}}</h5>
+     {% endfor %}
+    {% else %}
+     <p>content 가 없습니다.</p>
+    {% endif %}
 
 </body>
 </html>
