--- a/templates/pages/mainpage.html
+++ b/templates/pages/mainpage.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
+{% load static %}
 <html lang="ko">
 <head>
- <meta charset="UTF-8">
- <title>메인 페이지</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+     <meta name="description" content="main-landing page" />
+     <meta name="author" content="" />
+     <title>A Company</title>
+     <!-- Favicon-->
+     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+     <!-- Core theme CSS (includes Bootstrap)-->
+     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <!-- components   -->
+<!--    <link rel="import" href="../components/navbar.html">-->
+ </head>
 <body>
-<nav>
-<a href="/company/">company info</a>
- <a href="/mysite/">product</a>
-</nav>
+<!--navbar-->
+    {% include "../components/navbar.html" %}
+
 <h1>메인 페이지입니다.</h1>
+
+
+<!--footer-->
+    {% include "../components/footer.html" %}
+
 </body>
 </html>
