--- a/templates/mysite/content_list.html
+++ b/templates/mysite/content_list.html
@@ -5,42 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-     <meta name="description" content="" />
+     <meta name="description" content="main-landing page" />
      <meta name="author" content="" />
-     <title>Small Business - Start Bootstrap Template</title>
+     <title>Main</title>
      <!-- Favicon-->
      <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
      <!-- Core theme CSS (includes Bootstrap)-->
      <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
      <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+    <!-- components   -->
+<!--    <link rel="import" href="../components/navbar.html">-->
  </head>
    <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+        {% include "../components/navbar.html" %}
         <!-- Page Content-->
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             {% if content_list %}
                 {% for content in content_list %}
                 <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                    <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
+                    <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/1200x800/dee2e6/6c757d.jpg" alt="..." /></div>
                     <div class="col-lg-5">
                         <h1 class="font-weight-light">{{content.title}}</h1>
                         <p>{{content.content}}</p>
-                        <a class="btn btn-primary" href="#!">상품 살펴보기</a>
+                        <a class="btn btn-primary" href="/mysite/detail/">상품 살펴보기</a>
                     </div>
                         {% endfor %}
                     {% else %}
@@ -49,10 +39,43 @@
                 </div>
         </div>
         </div>
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="text-center mb-5">
+                        <h1 class="fw-bolder">Our Products</h1>
+                        <p class="lead fw-normal text-muted mb-0">browse out products!</p>
+                    </div>
+                    <div class="row gx-5">
+                        <div class="col-lg-6">
+                            <div class="position-relative mb-5">
+                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">상품이름</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="position-relative mb-5">
+                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">상품이름</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="position-relative mb-5 mb-lg-0">
+                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">상품이름</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="position-relative">
+                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">상품이름</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
-        </footer>
+        {% include "../components/footer.html" %}
 
     </body>
 
