--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -1,26 +1,5 @@
-<!doctype html>
-{% load static %}
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-     <meta name="description" content="main-landing page" />
-     <meta name="author" content="" />
-     <title>A Company</title>
-     <!-- Favicon-->
-     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-     <!-- Core theme CSS (includes Bootstrap)-->
-     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
-     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <!-- components   -->
-<!--    <link rel="import" href="../components/navbar.html">-->
- </head>
-
-    <body class="d-flex flex-column">
-        <main class="flex-shrink-0">
-<!--navbar-->
-            {% include "../components/navbar.html" %}
+{% extends '../components/base.html' %}
+{% block content %}
             <!-- Page content-->
             <section class="py-5">
                 <div class="container px-5">
@@ -79,8 +58,4 @@
                 </div>
             </section>
         </main>
-        <!-- Footer-->
-
-
-    </body>
-</html>
+{% endblock %}
