--- a/templates/pages/sign_up.html
+++ b/templates/pages/sign_up.html
@@ -1,25 +1,5 @@
-<!doctype html>
-{% load static %}
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-     <meta name="description" content="main-landing page" />
-     <meta name="author" content="" />
-     <title>SignUp</title>
-     <!-- Favicon-->
-     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-     <!-- Core theme CSS (includes Bootstrap)-->
-     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
-     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <!-- components   -->
-<!--    <link rel="import" href="../components/navbar.html">-->
- </head>
-   <body>
-        <!-- Responsive navbar-->
-
-        {% include "../components/navbar.html" %}
+{% extends '../components/base.html' %}
+{% block content %}
         <!-- Page Content-->
             <section class="py-5">
                 <div class="container px-5">
@@ -86,8 +66,4 @@
                             </div>
                         </div>
                     </div>
-
-
-    </body>
-
-</html>
+{% endblock %}
