--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -5,9 +5,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/mysite/">홈</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login/">로그인</a></li>
                         <li class="nav-item"><a class="nav-link" href="/company/">회사정보</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/myPage/">내 정보</a></li>
+
+                        {% if user.is_authenticated %}
+                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:logout' %}">{{ user.username }} (logout)</a></li>
+                             <li class="nav-item"><a class="nav-link" href="/myPage/">내 정보</a></li>
+                        {% else %}
+                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">login</a></li>
+                        {% endif %}
+<!--<li class="nav-item"><a class="nav-link" href="/login/">로그인</a></li>-->
                     </ul>
                 </div>
             </div>
